--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 
   <style>
     :root {
-      --dark-blue-1: #020b1a;
-      --dark-blue-2: #053462;
-      --dark-blue-3: #0b2342;
-      --accent: #1e90ff;
-      --accent-soft: #39a7ff;
-      --text-main: #f5f7ff;
-      --text-muted: #a9b9d8;
+      --blue-deep: #031024;
+      --blue-mid: #053c71;
+      --blue-soft: #0b70b8;
+      --blue-accent: #1ea5ff;
+      --blue-accent-soft: #37c0ff;
+      --text-main: #f7fbff;
+      --text-muted: #a9bed9;
       --border-subtle: rgba(255, 255, 255, 0.08);
     }
 
@@ -25,13 +25,18 @@
       margin: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
         sans-serif;
-      background: radial-gradient(circle at top, var(--dark-blue-2), var(--dark-blue-1) 50%, #000 100%);
+      /* mix of different blue tones */
+      background:
+        radial-gradient(circle at top left, #0a4b88, transparent 55%),
+        radial-gradient(circle at top right, #0b70b8, transparent 55%),
+        radial-gradient(circle at bottom, #021731, transparent 55%),
+        linear-gradient(160deg, var(--blue-deep), #020712 60%, #000000);
       color: var(--text-main);
       min-height: 100vh;
     }
 
     a {
-      color: var(--accent);
+      color: var(--blue-accent-soft);
     }
 
     .page {
@@ -47,7 +52,7 @@
       justify-content: space-between;
       padding: 1rem 1.5rem;
       margin-bottom: 1.5rem;
-      background: rgba(0, 0, 0, 0.45);
+      background: rgba(1, 10, 30, 0.75);
       border-radius: 1rem;
       border: 1px solid var(--border-subtle);
       backdrop-filter: blur(10px);
@@ -89,7 +94,7 @@
     }
 
     .device-card {
-      background: linear-gradient(135deg, var(--dark-blue-3), #020b1a);
+      background: linear-gradient(135deg, rgba(5, 60, 120, 0.95), #020d24);
       border-radius: 1.25rem;
       border: 1px solid var(--border-subtle);
       overflow: hidden;
@@ -104,15 +109,15 @@
 
     .device-card h2 {
       margin: 0.75rem 1.25rem 1.25rem;
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       letter-spacing: 0.08em;
       text-transform: uppercase;
     }
 
-    /* Form / content layout */
+    /* Layout for form + chatbot */
     .content-columns {
       display: grid;
-      grid-template-columns: minmax(0, 2.5fr) minmax(0, 1.4fr);
+      grid-template-columns: minmax(0, 2.4fr) minmax(0, 1.4fr);
       gap: 1.5rem;
       align-items: flex-start;
     }
@@ -124,7 +129,7 @@
     }
 
     .card {
-      background: rgba(0, 0, 0, 0.46);
+      background: rgba(0, 5, 20, 0.8);
       border-radius: 1.25rem;
       border: 1px solid var(--border-subtle);
       padding: 1.75rem 1.75rem 2rem;
@@ -144,7 +149,7 @@
       font-size: 0.95rem;
     }
 
-    /* Form styles */
+    /* Form */
     form {
       display: grid;
       grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -177,7 +182,7 @@
     textarea {
       border-radius: 0.7rem;
       border: 1px solid var(--border-subtle);
-      background: #07152b;
+      background: #04152f;
       color: var(--text-main);
       padding: 0.55rem 0.7rem;
       font: inherit;
@@ -187,8 +192,8 @@
     input:focus,
     select:focus,
     textarea:focus {
-      border-color: var(--accent-soft);
-      box-shadow: 0 0 0 1px rgba(57, 167, 255, 0.4);
+      border-color: var(--blue-accent);
+      box-shadow: 0 0 0 1px rgba(55, 192, 255, 0.4);
     }
 
     textarea {
@@ -210,7 +215,7 @@
       font-weight: 600;
       letter-spacing: 0.04em;
       text-transform: uppercase;
-      background: linear-gradient(135deg, var(--accent), var(--accent-soft));
+      background: linear-gradient(135deg, var(--blue-accent), var(--blue-accent-soft));
       color: #ffffff;
       cursor: pointer;
       box-shadow: 0 12px 25px rgba(0, 0, 0, 0.5);
@@ -219,7 +224,7 @@
     }
 
     button[type="submit"]:hover {
-      filter: brightness(1.08);
+      filter: brightness(1.06);
       box-shadow: 0 16px 30px rgba(0, 0, 0, 0.7);
       transform: translateY(-1px);
     }
@@ -229,16 +234,12 @@
       box-shadow: 0 10px 18px rgba(0, 0, 0, 0.6);
     }
 
-    /* Contact & chatbot */
     .contact-block {
       margin-top: 1rem;
       padding-top: 1rem;
       border-top: 1px dashed var(--border-subtle);
       font-size: 0.9rem;
-    }
-
-    .contact-item {
-      margin-bottom: 0.3rem;
+      color: var(--text-muted);
     }
 
     .chatbot {
@@ -246,21 +247,20 @@
       padding: 1rem;
       border-radius: 0.9rem;
       border: 1px solid var(--border-subtle);
-      background: rgba(5, 27, 60, 0.7);
+      background: rgba(4, 40, 90, 0.85);
       font-size: 0.9rem;
       color: var(--text-muted);
       text-align: center;
     }
   </style>
 </head>
-
 <body>
   <div class="page">
     <!-- HEADER WITH LOGO -->
     <header class="header">
       <div class="brand">
-        <!-- Update src to your real logo path -->
-        <img src="images/Logo.png" alt="HipOn logo" />
+        <!-- Same folder as HTML -->
+        <img src="Logo.png" alt="HipOn logo" />
         <div class="brand-title">
           <h1>HipOn Vigilance Portal</h1>
           <span>CERAMO &amp; POLYMO – Event Reporting</span>
@@ -268,23 +268,20 @@
       </div>
     </header>
 
-    <!-- DEVICE HERO IMAGES -->
+    <!-- DEVICE IMAGES -->
     <section class="devices">
       <article class="device-card">
-        <!-- Update src to your real CERAMO image path -->
-        <img src="images/ceramo.png" alt="CERAMO hip implant" />
+        <img src="devices ceramo.png" alt="CERAMO device" />
         <h2>CERAMO System</h2>
       </article>
-
       <article class="device-card">
-        <!-- Update src to your real POLYMO image path -->
-        <img src="images/polymo.png" alt="POLYMO hip implant" />
+        <img src="devices polymo.png" alt="POLYMO device" />
         <h2>POLYMO System</h2>
       </article>
     </section>
 
     <section class="content-columns">
-      <!-- LEFT: COMPLAINT SUBMISSION FORM ONLY -->
+      <!-- LEFT: submission form ONLY (Julius AI removed) -->
       <section class="card">
         <h2>Submit a Vigilance Case</h2>
         <p>
@@ -292,7 +289,6 @@
           safety concern related to HipOn CERAMO or POLYMO systems.
         </p>
 
-        <!-- NOTE: no Julius AI prompt section; only the form and drop-downs -->
         <form id="complaintForm">
           <!-- Reporter details -->
           <div class="field">
@@ -304,7 +300,6 @@
             <label for="role">Role</label>
             <select id="role" name="role" required>
               <option value="">Select role…</option>
-              <!-- populated by JS -->
             </select>
           </div>
 
@@ -317,7 +312,6 @@
             <label for="country">Country</label>
             <select id="country" name="country" required>
               <option value="">Select country…</option>
-              <!-- populated by JS -->
             </select>
           </div>
 
@@ -329,12 +323,12 @@
           </div>
 
           <div class="field">
-            <label for="email">Email</label>
-            <input id="email" name="email" type="email" required />
+            <label for="email">Email (optional)</label>
+            <input id="email" name="email" type="email" />
           </div>
 
           <div class="field">
-            <label for="phone">Phone</label>
+            <label for="phone">Phone (optional)</label>
             <input id="phone" name="phone" type="tel" />
           </div>
 
@@ -408,8 +402,8 @@
             <label for="narrative">Event description</label>
             <textarea id="narrative" name="narrative" required></textarea>
             <div class="hint">
-              Describe the sequence of events, findings, patient outcomes,
-              and any corrective actions taken.
+              Describe what happened, when it occurred, findings, patient
+              outcome and any actions taken.
             </div>
           </div>
 
@@ -418,134 +412,137 @@
 
         <div id="formMessage" class="hint" style="margin-top:0.75rem;"></div>
 
+        <!-- Direct contact text – no phone number / email shown -->
         <div class="contact-block">
-          <div class="contact-item">
-            <strong>Direct contact:</strong>
-          </div>
-          <div class="contact-item">
-            Vigilance email: <a href="mailto:vigilance@hipon-medical.com">vigilance@hipon-medical.com</a>
-          </div>
-          <div class="contact-item">
-            Phone: +33 1 23 45 67 89
-          </div>
+          <strong>Direct contact:</strong>
+          For urgent matters, please use your usual HipOn contact route
+          or the vigilance contact information supplied in the product
+          documentation.
         </div>
       </section>
 
-      <!-- RIGHT: CONTACT / CHATBOT CARD -->
+      <!-- RIGHT: chatbot / support card -->
       <aside class="card">
         <h2>Chat &amp; Support</h2>
         <p>
-          For urgent clinical questions, please use your usual HipOn contact
-          or call the vigilance number listed in the Instructions for Use.
-          For guidance on using this portal, our chatbot is available below.
+          For general questions about this portal you can use the chatbot
+          below. Clinical or regulatory questions should be directed to your
+          HipOn representative or local vigilance contact.
         </p>
 
         <div class="chatbot">
-          <!-- Replace this with your real chatbot embed / script -->
-          Chatbot placeholder: integrate your existing widget or script here.
+          <!-- Replace this with your actual chatbot embed code -->
+          Chatbot placeholder – insert your chatbot widget here.
         </div>
       </aside>
     </section>
   </div>
 
   <script>
-    // -----------------------------
-    // CONFIG / LOOKUP ARRAYS
-    // (same data as your original script, but used only to populate drop-downs)
-    // -----------------------------
-    const countries = [
-      "France",
-      "Germany",
-      "Italy",
-      "Spain",
-      "Sweden",
-      "Netherlands",
-      "Belgium",
-      "Austria",
-      "Other EU/EEA",
-    ];
+    (function () {
+      // --- CONFIG / LOOKUP ARRAYS (used ONLY for dropdowns) ---
+      const countries = [
+        "France",
+        "Germany",
+        "Italy",
+        "Spain",
+        "Sweden",
+        "Netherlands",
+        "Belgium",
+        "Austria",
+        "Other EU/EEA",
+      ];
 
-    const roles = [
-      "Orthopedic Surgeon",
-      "OR Nurse",
-      "Scrub Nurse",
-      "Physiotherapist",
-      "Radiologist",
-      "Other HCP",
-    ];
+      const roles = [
+        "Orthopedic Surgeon",
+        "OR Nurse",
+        "Scrub Nurse",
+        "Physiotherapist",
+        "Radiologist",
+        "Other HCP",
+      ];
 
-    const cities = [
-      "Paris",
-      "Berlin",
-      "Rome",
-      "Madrid",
-      "Stockholm",
-      "Amsterdam",
-      "Brussels",
-      "Vienna",
-      "Lyon",
-      "Hamburg",
-      "Milan",
-      "Barcelona",
-      "Uppsala",
-      "Rotterdam",
-      "Ghent",
-      "Graz",
-    ];
+      const cities = [
+        "Paris",
+        "Berlin",
+        "Rome",
+        "Madrid",
+        "Stockholm",
+        "Amsterdam",
+        "Brussels",
+        "Vienna",
+        "Lyon",
+        "Hamburg",
+        "Milan",
+        "Barcelona",
+        "Uppsala",
+        "Rotterdam",
+        "Ghent",
+        "Graz",
+      ];
 
-    const stemSizes = ["#1", "#2", "#3", "#4", "#5", "#6", "#7", "#8"];
-    const cupSizes = [
-      "44 mm",
-      "46 mm",
-      "48 mm",
-      "50 mm",
-      "52 mm",
-      "54 mm",
-      "56 mm",
-      "58 mm",
-      "60 mm",
-      "62 mm",
-    ];
-    const headSizes = ["28 mm", "32 mm", "36 mm", "40 mm"];
+      const stemSizes = ["#1", "#2", "#3", "#4", "#5", "#6", "#7", "#8"];
+      const cupSizes = [
+        "44 mm",
+        "46 mm",
+        "48 mm",
+        "50 mm",
+        "52 mm",
+        "54 mm",
+        "56 mm",
+        "58 mm",
+        "60 mm",
+        "62 mm",
+      ];
+      const headSizes = ["28 mm", "32 mm", "36 mm", "40 mm"];
 
-    function populateSelect(id, options) {
-      const select = document.getElementById(id);
-      if (!select) return;
-      options.forEach((value) => {
-        const opt = document.createElement("option");
-        opt.value = value;
-        opt.textContent = value;
-        select.appendChild(opt);
+      function populateSelect(id, options) {
+        const select = document.getElementById(id);
+        if (!select) return;
+        options.forEach((val) => {
+          const opt = document.createElement("option");
+          opt.value = val;
+          opt.textContent = val;
+          select.appendChild(opt);
+        });
+      }
+
+      document.addEventListener("DOMContentLoaded", () => {
+        populateSelect("country", countries);
+        populateSelect("role", roles);
+        populateSelect("city", cities);
+        populateSelect("stemSize", stemSizes);
+        populateSelect("cupSize", cupSizes);
+        populateSelect("headSize", headSizes);
+
+        const form = document.getElementById("complaintForm");
+        const message = document.getElementById("formMessage");
+
+        form.addEventListener("submit", (e) => {
+          e.preventDefault();
+
+          // HERE: connect to your Google Sheet / Apps Script endpoint.
+          // Example (to be adapted to your own URL):
+          //
+          // const data = new FormData(form);
+          // fetch("YOUR_APPS_SCRIPT_WEB_APP_URL", {
+          //   method: "POST",
+          //   body: data,
+          // }).then(() => { ... });
+
+          message.textContent =
+            "Thank you. Your vigilance report has been submitted.";
+          form.reset();
+        });
       });
-    }
 
-    document.addEventListener("DOMContentLoaded", () => {
-      populateSelect("country", countries);
-      populateSelect("role", roles);
-      populateSelect("city", cities);
-      populateSelect("stemSize", stemSizes);
-      populateSelect("cupSize", cupSizes);
-      populateSelect("headSize", headSizes);
-
-      const form = document.getElementById("complaintForm");
-      const message = document.getElementById("formMessage");
-
-      form.addEventListener("submit", (e) => {
-        e.preventDefault();
-
-        // TODO: connect here to your internal Google Sheet endpoint.
-        // You might send `new FormData(form)` with fetch() to your script.
-
-        message.textContent =
-          "Thank you. Your vigilance report has been submitted to HipOn.";
-        form.reset();
-      });
-    });
-
-    // IMPORTANT:
-    // The original script that generated and downloaded hipon_fake_complaints.json
-    // has been removed so that no existing complaints or analysis are exposed
-    // on the public portal. Use that generator only internally if needed.
+      // NOTE:
+      // The previous script that generated 50 fake complaints and
+      // downloaded hipon_fake_complaints.json has been removed so that
+      // existing complaints are not visible or downloadable from
+      // the public portal. Analysis can now be done privately via
+      // your Google Sheet connection.
+    })();
   </script>
 </body>
 </html>
