--- a/index.html
+++ b/index.html
@@ -323,16 +323,7 @@
           CERAMO or POLYMO systems.
         </p>
 
-        <!-- Hidden iframe to capture the Apps Script response -->
-        <iframe name="submitFrame" id="submitFrame" style="display:none;"></iframe>
-
-        <form
-          id="complaintForm"
-          enctype="multipart/form-data"
-          method="POST"
-          action="https://script.google.com/macros/s/AKfycbxcHgZMx28Lz3zFFkLns2hQgQs_gPXuJjZs8-ZwTkzfobwJws9w7jEHcUNxeToZkprJ/exec"
-          target="submitFrame"
-        >
+        <form id="complaintForm">
           <!-- Reporter details -->
           <div class="field">
             <label for="hcpName">Reporter name</label>
@@ -516,6 +507,9 @@
 
   <script>
     (function () {
+      const scriptURL =
+        "https://script.google.com/macros/s/AKfycbxcHgZMx28Lz3zFFkLns2hQgQs_gPXuJjZs8-ZwTkzfobwJws9w7jEHcUNxeToZkprJ/exec";
+
       const countries = [
         "Austria","Belgium","Bulgaria","Croatia","Cyprus","Czech Republic",
         "Denmark","Estonia","Finland","France","Germany","Greece","Hungary",
@@ -557,6 +551,15 @@
         });
       }
 
+      function readFileAsDataURL(file) {
+        return new Promise((resolve, reject) => {
+          const reader = new FileReader();
+          reader.onload = () => resolve(reader.result);
+          reader.onerror = () => reject(reader.error);
+          reader.readAsDataURL(file);
+        });
+      }
+
       document.addEventListener("DOMContentLoaded", () => {
         populateSelect("country", countries);
         populateSelect("role", roles);
@@ -564,12 +567,10 @@
         populateSelect("cupSize", cupSizes);
         populateSelect("headSize", headSizes);
 
-        const reportDateInput = document.getElementById("reportDate");
         const form = document.getElementById("complaintForm");
         const message = document.getElementById("formMessage");
-        const iframe = document.getElementById("submitFrame");
+        const reportDateInput = document.getElementById("reportDate");
 
-        // Set default report date to today
         function setTodayReportDate() {
           if (!reportDateInput) return;
           const today = new Date();
@@ -578,22 +579,69 @@
           const dd = String(today.getDate()).padStart(2, "0");
           reportDateInput.value = `${yyyy}-${mm}-${dd}`;
         }
+
         setTodayReportDate();
 
-        // Show "submitting" message when form is sent
-        form.addEventListener("submit", () => {
-          form.dataset.submitting = "true";
+        form.addEventListener("submit", async (e) => {
+          e.preventDefault();
           message.textContent = "Submitting… please wait.";
-        });
 
-        // When iframe loads (response from Apps Script), show success
-        iframe.addEventListener("load", () => {
-          if (form.dataset.submitting === "true") {
+          const attachmentsInput = document.getElementById("attachments");
+          const files = attachmentsInput && attachmentsInput.files
+            ? Array.from(attachmentsInput.files)
+            : [];
+
+          try {
+            // Read files as data URLs (Base64)
+            const attachments = [];
+            for (const file of files) {
+              const dataUrl = await readFileAsDataURL(file);
+              attachments.push({
+                name: file.name,
+                type: file.type,
+                data: dataUrl   // will be decoded in Apps Script
+              });
+            }
+
+            // Collect other fields
+            const payload = {
+              hcpName: document.getElementById("hcpName").value || "",
+              role: document.getElementById("role").value || "",
+              facility: document.getElementById("facility").value || "",
+              country: document.getElementById("country").value || "",
+              city: document.getElementById("city").value || "",
+              email: document.getElementById("email").value || "",
+              phone: document.getElementById("phone").value || "",
+              eventDate: document.getElementById("eventDate").value || "",
+              reportDate: document.getElementById("reportDate").value || "",
+              deviceSystem: document.getElementById("deviceSystem").value || "",
+              stemSize: document.getElementById("stemSize").value || "",
+              cupSize: document.getElementById("cupSize").value || "",
+              headSize: document.getElementById("headSize").value || "",
+              offsetOption: document.getElementById("offsetOption").value || "",
+              neckLength: document.getElementById("neckLength").value || "",
+              lotNumber: document.getElementById("lotNumber").value || "",
+              serialNumber: document.getElementById("serialNumber").value || "",
+              udi: document.getElementById("udi").value || "",
+              narrative: document.getElementById("narrative").value || "",
+              attachments: attachments
+            };
+
+            // Send JSON payload; use no-cors and don't try to read response
+            await fetch(scriptURL, {
+              method: "POST",
+              mode: "no-cors",
+              body: JSON.stringify(payload)
+            });
+
             message.textContent =
               "Thank you. Your safety event report has been submitted.";
             form.reset();
             setTodayReportDate();
-            form.dataset.submitting = "false";
+          } catch (err) {
+            console.error(err);
+            message.textContent =
+              "Network error while submitting the report. Please try again.";
           }
         });
       });
