--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+      <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js"></script>
+<script src="https://files.bpcontent.cloud/2025/11/05/15/20251105150803-DSRC8PF2.js" defer></script>
   <meta charset="UTF-8" />
   <title>HipOn Vigilance Portal – Safety Events Reporting</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
